Fix several compilation error on macos.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -9,8 +9,8 @@ add_subdirectory(extern)
 
 target_link_libraries(proto
     PRIVATE
-        imgui
+        # imgui
         glfw
         volk
-        VulkanMemoryAllocator
+        # VulkanMemoryAllocator
 )
