--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
-
 project(proto)
+
+set (CMAKE_CXX_STANDARD 17)
 
 set(ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 
